    (xyao via wang)

    HADOOP-12384. Add "-direct" flag option for fs copy so that user can choose
    not to create "._COPYING_" file (J.Andreina via vinayakumarb)

    HADOOP-12324. Better exception reporting in SaslPlainServer.
    (Mike Yoder via stevel)

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

  OPTIMIZATIONS

    HADOOP-11785. Reduce the number of listStatus operation in distcp
    buildListing (Zoran Dimitrijevic via Colin P. McCabe)

    HADOOP-11970. Replace uses of ThreadLocal<Random> with JDK7
    ThreadLocalRandom.  (Sean Busbey via Colin P. McCabe)

    HADOOP-11772. RPC Invoker relies on static ClientCache which has
    synchronized(this) blocks. (wheat9)

    HADOOP-11242. Record the time of calling in tracing span of
    IPC server. (Masatake Iwasaki via aajisaka)

    HADOOP-11885. hadoop-dist dist-layout-stitching.sh does not work with dash.
    (wang)

    HADOOP-12104. Migrate Hadoop Pipes native build to new CMake framework
    (alanburlison via cmccabe)

    HADOOP-12036. Consolidate all of the cmake extensions in one directory
    (alanburlison via cmccabe)

    HADOOP-12112. Make hadoop-common-project Native code -Wall-clean
    (alanburlison via cmccabe)

    HADOOP-12172. FsShell mkdir -p makes an unnecessary check for the existence
    of the parent. (cnauroth)

    HADOOP-12194. Support for incremental generation in the protoc plugin.
    (wang)

    HADOOP-11878. FileContext#fixRelativePart should check for not null for a
    more informative exception. (Brahma Reddy Battula via kasha)

  BUG FIXES

    HADOOP-12374. Updated expunge command description.
    (WeiWei Yang via eyang)

    HADOOP-12352. Delay in checkpointing Trash can leave trash for 2 intervals
    before deleting (Casey Brotherton via harsh)

    HADOOP-11568. Description on usage of classpath in hadoop command is
    incomplete. ( Archana T via vinayakumarb )
